--- a/main.ipynb
+++ b/main.ipynb
@@ -2857,6 +2857,457 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3e6f6d9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Article No.</th>\n",
+       "      <th>Pattern</th>\n",
+       "      <th>Shade No.</th>\n",
+       "      <th>Print Design</th>\n",
+       "      <th>Print Color</th>\n",
+       "      <th>Meter</th>\n",
+       "      <th>Fabric Finish</th>\n",
+       "      <th>Warp Shrinkage   (AATCC-135)</th>\n",
+       "      <th>Weft Shrinkage   (AATCC-135)</th>\n",
+       "      <th>EPI                             (ASTMD3775)</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Weft Tear     (ASTMD1424)</th>\n",
+       "      <th>Warp Tensile    (ASTMD5034</th>\n",
+       "      <th>Weft Tensile              (ASTMD5034)</th>\n",
+       "      <th>Warp Slippage    (ASTMD434)</th>\n",
+       "      <th>Weft Slippage    (ASTMD434)</th>\n",
+       "      <th>Warp Seam Strength    (ASTMD434)</th>\n",
+       "      <th>Weft Seam Strength     (ASTMD434)</th>\n",
+       "      <th>Growth              (ASTMD3107)</th>\n",
+       "      <th>Elongation    (ASTMD3107)</th>\n",
+       "      <th>GSM                         (ASTMD3776)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>140371</td>\n",
+       "      <td>CT+SF</td>\n",
+       "      <td>RFD0000000</td>\n",
+       "      <td>A000498F08</td>\n",
+       "      <td>R5B0000001</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>-1.71</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>11.02</td>\n",
+       "      <td>346.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>nf</td>\n",
+       "      <td>nf</td>\n",
+       "      <td>159.0</td>\n",
+       "      <td>213.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>115.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>16000084</td>\n",
+       "      <td>JM+DA</td>\n",
+       "      <td>5000056941</td>\n",
+       "      <td>A000653F03</td>\n",
+       "      <td>DW00000001</td>\n",
+       "      <td>4800.0</td>\n",
+       "      <td>141.1</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.57</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.82</td>\n",
+       "      <td>227.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>103</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>16000084</td>\n",
+       "      <td>JM+DA</td>\n",
+       "      <td>9000089474</td>\n",
+       "      <td>A000542F02</td>\n",
+       "      <td>DW00000001</td>\n",
+       "      <td>3980.0</td>\n",
+       "      <td>140.7</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>-2.86</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.82</td>\n",
+       "      <td>247.0</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>99</td>\n",
+       "      <td>113</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>128.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>85.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>A1400486</td>\n",
+       "      <td>ST+PF</td>\n",
+       "      <td>6000156591</td>\n",
+       "      <td>A000234G02</td>\n",
+       "      <td>P600000003</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>-4.00</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>34.32</td>\n",
+       "      <td>568.0</td>\n",
+       "      <td>314.0</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>212.0</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>242.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>A1300280</td>\n",
+       "      <td>JV+SF</td>\n",
+       "      <td>6000157301</td>\n",
+       "      <td>A000753G04</td>\n",
+       "      <td>R600000001</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>138.5</td>\n",
+       "      <td>0.86</td>\n",
+       "      <td>-4.29</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>17.88</td>\n",
+       "      <td>262.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>120</td>\n",
+       "      <td>147.0</td>\n",
+       "      <td>167.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>123.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28725</th>\n",
+       "      <td>130129</td>\n",
+       "      <td>CT+PF</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>G000389K06</td>\n",
+       "      <td>P3HIK00472</td>\n",
+       "      <td>1971.0</td>\n",
+       "      <td>149.5</td>\n",
+       "      <td>-2.50</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9.17</td>\n",
+       "      <td>464.0</td>\n",
+       "      <td>202.0</td>\n",
+       "      <td>nf</td>\n",
+       "      <td>stb</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>294.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>171.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28730</th>\n",
+       "      <td>A132A744</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>G000353F06</td>\n",
+       "      <td>R8HI000415</td>\n",
+       "      <td>9140.0</td>\n",
+       "      <td>142.5</td>\n",
+       "      <td>-2.50</td>\n",
+       "      <td>-3.50</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>22.70</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>NF</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>156.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>103.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28732</th>\n",
+       "      <td>A132A744</td>\n",
+       "      <td>CV+5DA</td>\n",
+       "      <td>RFP0000000</td>\n",
+       "      <td>G000450F06</td>\n",
+       "      <td>R5HH000099</td>\n",
+       "      <td>16360.0</td>\n",
+       "      <td>143.7</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>-3.50</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>24.94</td>\n",
+       "      <td>197.0</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>nf</td>\n",
+       "      <td>nf</td>\n",
+       "      <td>88.0</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>102.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28733</th>\n",
+       "      <td>150264</td>\n",
+       "      <td>CT+SF</td>\n",
+       "      <td>8000241574</td>\n",
+       "      <td>G001279G01</td>\n",
+       "      <td>PWHF000579</td>\n",
+       "      <td>605.0</td>\n",
+       "      <td>148.8</td>\n",
+       "      <td>-0.50</td>\n",
+       "      <td>-1.50</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.90</td>\n",
+       "      <td>356.0</td>\n",
+       "      <td>161.0</td>\n",
+       "      <td>76</td>\n",
+       "      <td>200</td>\n",
+       "      <td>117.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>118.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28745</th>\n",
+       "      <td>14015</td>\n",
+       "      <td>CT+SF</td>\n",
+       "      <td>8000242204</td>\n",
+       "      <td>G002229G02</td>\n",
+       "      <td>DW2HJ00098</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>149.5</td>\n",
+       "      <td>-1.50</td>\n",
+       "      <td>-2.00</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>8.51</td>\n",
+       "      <td>360.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>nf</td>\n",
+       "      <td>198</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>129.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>24409 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Article No. Pattern   Shade No. Print Design Print Color    Meter  \\\n",
+       "4          140371   CT+SF  RFD0000000   A000498F08  R5B0000001   1000.0   \n",
+       "7        16000084   JM+DA  5000056941   A000653F03  DW00000001   4800.0   \n",
+       "8        16000084   JM+DA  9000089474   A000542F02  DW00000001   3980.0   \n",
+       "9        A1400486   ST+PF  6000156591   A000234G02  P600000003   1000.0   \n",
+       "10       A1300280   JV+SF  6000157301   A000753G04  R600000001   3750.0   \n",
+       "...           ...     ...         ...          ...         ...      ...   \n",
+       "28725      130129   CT+PF  RFP0000000   G000389K06  P3HIK00472   1971.0   \n",
+       "28730    A132A744  CV+5DA  RFP0000000   G000353F06  R8HI000415   9140.0   \n",
+       "28732    A132A744  CV+5DA  RFP0000000   G000450F06  R5HH000099  16360.0   \n",
+       "28733      150264   CT+SF  8000241574   G001279G01  PWHF000579    605.0   \n",
+       "28745       14015   CT+SF  8000242204   G002229G02  DW2HJ00098   1000.0   \n",
+       "\n",
+       "       Fabric Finish  Warp Shrinkage   (AATCC-135)  \\\n",
+       "4              150.0                          0.57   \n",
+       "7              141.1                          0.00   \n",
+       "8              140.7                          1.14   \n",
+       "9              149.0                         -2.00   \n",
+       "10             138.5                          0.86   \n",
+       "...              ...                           ...   \n",
+       "28725          149.5                         -2.50   \n",
+       "28730          142.5                         -2.50   \n",
+       "28732          143.7                         -2.00   \n",
+       "28733          148.8                         -0.50   \n",
+       "28745          149.5                         -1.50   \n",
+       "\n",
+       "       Weft Shrinkage   (AATCC-135)  \\\n",
+       "4                             -1.71   \n",
+       "7                             -0.57   \n",
+       "8                             -2.86   \n",
+       "9                             -4.00   \n",
+       "10                            -4.29   \n",
+       "...                             ...   \n",
+       "28725                         -2.00   \n",
+       "28730                         -3.50   \n",
+       "28732                         -3.50   \n",
+       "28733                         -1.50   \n",
+       "28745                         -2.00   \n",
+       "\n",
+       "       EPI                             (ASTMD3775)  ...  \\\n",
+       "4                                            126.0  ...   \n",
+       "7                                            106.0  ...   \n",
+       "8                                            106.0  ...   \n",
+       "9                                            202.0  ...   \n",
+       "10                                            78.0  ...   \n",
+       "...                                            ...  ...   \n",
+       "28725                                        130.0  ...   \n",
+       "28730                                         78.0  ...   \n",
+       "28732                                         78.0  ...   \n",
+       "28733                                        152.0  ...   \n",
+       "28745                                        140.0  ...   \n",
+       "\n",
+       "       Weft Tear     (ASTMD1424)  Warp Tensile    (ASTMD5034  \\\n",
+       "4                          11.02                       346.0   \n",
+       "7                          17.82                       227.0   \n",
+       "8                          17.82                       247.0   \n",
+       "9                          34.32                       568.0   \n",
+       "10                         17.88                       262.0   \n",
+       "...                          ...                         ...   \n",
+       "28725                       9.17                       464.0   \n",
+       "28730                      22.70                       210.0   \n",
+       "28732                      24.94                       197.0   \n",
+       "28733                       7.90                       356.0   \n",
+       "28745                       8.51                       360.0   \n",
+       "\n",
+       "       Weft Tensile              (ASTMD5034)  Warp Slippage    (ASTMD434)  \\\n",
+       "4                                      164.0                           nf   \n",
+       "7                                      183.0                          103   \n",
+       "8                                      202.0                           99   \n",
+       "9                                      314.0                           NF   \n",
+       "10                                     195.0                           NF   \n",
+       "...                                      ...                          ...   \n",
+       "28725                                  202.0                           nf   \n",
+       "28730                                  178.0                           NF   \n",
+       "28732                                  186.0                           nf   \n",
+       "28733                                  161.0                           76   \n",
+       "28745                                  174.0                           nf   \n",
+       "\n",
+       "       Weft Slippage    (ASTMD434) Warp Seam Strength    (ASTMD434)  \\\n",
+       "4                               nf                            159.0   \n",
+       "7                               NF                            103.0   \n",
+       "8                              113                            104.0   \n",
+       "9                               NF                            212.0   \n",
+       "10                             120                            147.0   \n",
+       "...                            ...                              ...   \n",
+       "28725                          stb                            196.0   \n",
+       "28730                           NF                             98.0   \n",
+       "28732                           nf                             88.0   \n",
+       "28733                          200                            117.0   \n",
+       "28745                          198                            122.0   \n",
+       "\n",
+       "      Weft Seam Strength     (ASTMD434)  Growth              (ASTMD3107)  \\\n",
+       "4                                 213.0                              NaN   \n",
+       "7                                 119.0                              NaN   \n",
+       "8                                 128.0                              NaN   \n",
+       "9                                 232.0                              NaN   \n",
+       "10                                167.0                              NaN   \n",
+       "...                                 ...                              ...   \n",
+       "28725                             294.0                              NaN   \n",
+       "28730                             156.0                              NaN   \n",
+       "28732                             145.0                              NaN   \n",
+       "28733                             200.0                              NaN   \n",
+       "28745                             200.0                              NaN   \n",
+       "\n",
+       "       Elongation    (ASTMD3107)  GSM                         (ASTMD3776)  \n",
+       "4                            NaN                                    115.0  \n",
+       "7                            NaN                                     83.0  \n",
+       "8                            NaN                                     85.0  \n",
+       "9                            NaN                                    242.0  \n",
+       "10                           NaN                                    123.0  \n",
+       "...                          ...                                      ...  \n",
+       "28725                        NaN                                    171.0  \n",
+       "28730                        NaN                                    103.0  \n",
+       "28732                        NaN                                    102.0  \n",
+       "28733                        NaN                                    118.0  \n",
+       "28745                        NaN                                    129.0  \n",
+       "\n",
+       "[24409 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main_df = pd.read_csv(\"main_params_data.csv\")\n",
+    "main_df.dropna(subset=['Warp Tear    (ASTMD1424)'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "95757d24",
    "metadata": {},
