epi-ppi extracted

--- a/main.ipynb
+++ b/main.ipynb
@@ -3457,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 144,
    "id": "6c173348",
    "metadata": {},
    "outputs": [
@@ -3484,13 +3484,9 @@
        "      <th></th>\n",
        "      <th>K1</th>\n",
        "      <th>Construction</th>\n",
-       "      <th>Warp*Weft</th>\n",
-       "      <th>EPI*PPI</th>\n",
-       "      <th>Width</th>\n",
-       "      <th>Weave</th>\n",
-       "      <th>GSM</th>\n",
        "      <th>Warp</th>\n",
        "      <th>Weft</th>\n",
+       "      <th>EPI-PPI</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3498,61 +3494,41 @@
        "      <th>0</th>\n",
        "      <td>10606</td>\n",
        "      <td>6OE*6OE-48*44-162.6-4/4 MATT</td>\n",
-       "      <td>6OE*6OE</td>\n",
+       "      <td>6OE</td>\n",
+       "      <td>6OE-48*44-162.6-4/4 MATT</td>\n",
        "      <td>48*44</td>\n",
-       "      <td>162.6</td>\n",
-       "      <td>4/4 MATT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6OE</td>\n",
-       "      <td>6OE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10609</td>\n",
        "      <td>885D.PET*885D.PET-38*28-156-PLAIN</td>\n",
-       "      <td>885D.PET*885D.PET</td>\n",
+       "      <td>885D.PET</td>\n",
+       "      <td>885D.PET-38*28-156-PLAIN</td>\n",
        "      <td>38*28</td>\n",
-       "      <td>156</td>\n",
-       "      <td>PLAIN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>885D.PET</td>\n",
-       "      <td>885D.PET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>10609</td>\n",
        "      <td>885D.PET*885D.PET-38*28-156-PLAIN</td>\n",
-       "      <td>885D.PET*885D.PET</td>\n",
+       "      <td>885D.PET</td>\n",
+       "      <td>885D.PET-38*28-156-PLAIN</td>\n",
        "      <td>38*28</td>\n",
-       "      <td>156</td>\n",
-       "      <td>PLAIN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>885D.PET</td>\n",
-       "      <td>885D.PET</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>10714</td>\n",
        "      <td>7OE*6OE-68*38-165.1- 3/1</td>\n",
-       "      <td>7OE*6OE</td>\n",
-       "      <td>68*38</td>\n",
-       "      <td>165.1</td>\n",
-       "      <td>3/1</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>7OE</td>\n",
-       "      <td>6OE</td>\n",
+       "      <td>6OE-68*38-165.1- 3/1</td>\n",
+       "      <td>68*38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>10750</td>\n",
        "      <td>7OE*7OE-68*38-160-3/1,S TWILL</td>\n",
-       "      <td>7OE*7OE</td>\n",
+       "      <td>7OE</td>\n",
+       "      <td>7OE-68*38-160-3/1,S TWILL</td>\n",
        "      <td>68*38</td>\n",
-       "      <td>160</td>\n",
-       "      <td>3/1,S TWILL</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7OE</td>\n",
-       "      <td>7OE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -3561,74 +3537,50 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39360</th>\n",
+       "      <th>39320</th>\n",
        "      <td>U2600001</td>\n",
        "      <td>2/60COM+2/20OE*30COM-128*124-179.6-DOBBY(TOPBEAM)</td>\n",
-       "      <td>2/60COM+2/20OE*30COM</td>\n",
-       "      <td>128*124</td>\n",
-       "      <td>179.6</td>\n",
-       "      <td>DOBBY(TOPBEAM)</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2/60COM+2/20OE</td>\n",
-       "      <td>30COM</td>\n",
+       "      <td>30COM-128*124-179.6-DOBBY(TOPBEAM)</td>\n",
+       "      <td>128*124</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39361</th>\n",
+       "      <th>39321</th>\n",
        "      <td>U2600002</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
-       "      <td>2/60COM*30SPX+300D.PET</td>\n",
-       "      <td>110*86</td>\n",
-       "      <td>175.3</td>\n",
-       "      <td>DOBBY</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2/60COM</td>\n",
-       "      <td>30SPX+300D.PET</td>\n",
+       "      <td>30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
+       "      <td>110*86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39362</th>\n",
+       "      <th>39322</th>\n",
        "      <td>U2600003</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
-       "      <td>2/60COM*30SPX+300D.PET</td>\n",
-       "      <td>110*86</td>\n",
-       "      <td>175.3</td>\n",
-       "      <td>DOBBY</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2/60COM</td>\n",
-       "      <td>30SPX+300D.PET</td>\n",
+       "      <td>30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
+       "      <td>110*86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39363</th>\n",
+       "      <th>39323</th>\n",
        "      <td>U2600004</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
-       "      <td>2/60COM*30SPX+300D.PET</td>\n",
-       "      <td>110*86</td>\n",
-       "      <td>175.3</td>\n",
-       "      <td>DOBBY</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2/60COM</td>\n",
-       "      <td>30SPX+300D.PET</td>\n",
+       "      <td>30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
+       "      <td>110*86</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>39364</th>\n",
+       "      <th>39324</th>\n",
        "      <td>U2600005</td>\n",
        "      <td>2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
-       "      <td>2/60COM*30SPX+300D.PET</td>\n",
-       "      <td>110*86</td>\n",
-       "      <td>175.3</td>\n",
-       "      <td>DOBBY</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>2/60COM</td>\n",
-       "      <td>30SPX+300D.PET</td>\n",
+       "      <td>30SPX+300D.PET-110*86-175.3-DOBBY</td>\n",
+       "      <td>110*86</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>39365 rows × 9 columns</p>\n",
+       "<p>39325 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3639,70 +3591,36 @@
        "3         10714                           7OE*6OE-68*38-165.1- 3/1   \n",
        "4         10750                      7OE*7OE-68*38-160-3/1,S TWILL   \n",
        "...         ...                                                ...   \n",
-       "39360  U2600001  2/60COM+2/20OE*30COM-128*124-179.6-DOBBY(TOPBEAM)   \n",
-       "39361  U2600002          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
-       "39362  U2600003          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
-       "39363  U2600004          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
-       "39364  U2600005          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39320  U2600001  2/60COM+2/20OE*30COM-128*124-179.6-DOBBY(TOPBEAM)   \n",
+       "39321  U2600002          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39322  U2600003          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39323  U2600004          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
+       "39324  U2600005          2/60COM*30SPX+300D.PET-110*86-175.3-DOBBY   \n",
        "\n",
-       "                    Warp*Weft  EPI*PPI  Width           Weave  GSM  \\\n",
-       "0                     6OE*6OE    48*44  162.6        4/4 MATT  NaN   \n",
-       "1           885D.PET*885D.PET    38*28    156           PLAIN  NaN   \n",
-       "2           885D.PET*885D.PET    38*28    156           PLAIN  NaN   \n",
-       "3                     7OE*6OE    68*38  165.1             3/1  NaN   \n",
-       "4                     7OE*7OE    68*38    160     3/1,S TWILL  NaN   \n",
-       "...                       ...      ...    ...             ...  ...   \n",
-       "39360    2/60COM+2/20OE*30COM  128*124  179.6  DOBBY(TOPBEAM)  NaN   \n",
-       "39361  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
-       "39362  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
-       "39363  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
-       "39364  2/60COM*30SPX+300D.PET   110*86  175.3           DOBBY  NaN   \n",
+       "                 Warp                                Weft  EPI-PPI  \n",
+       "0                 6OE            6OE-48*44-162.6-4/4 MATT    48*44  \n",
+       "1            885D.PET            885D.PET-38*28-156-PLAIN    38*28  \n",
+       "2            885D.PET            885D.PET-38*28-156-PLAIN    38*28  \n",
+       "3                 7OE                6OE-68*38-165.1- 3/1    68*38  \n",
+       "4                 7OE           7OE-68*38-160-3/1,S TWILL    68*38  \n",
+       "...               ...                                 ...      ...  \n",
+       "39320  2/60COM+2/20OE  30COM-128*124-179.6-DOBBY(TOPBEAM)  128*124  \n",
+       "39321         2/60COM   30SPX+300D.PET-110*86-175.3-DOBBY   110*86  \n",
+       "39322         2/60COM   30SPX+300D.PET-110*86-175.3-DOBBY   110*86  \n",
+       "39323         2/60COM   30SPX+300D.PET-110*86-175.3-DOBBY   110*86  \n",
+       "39324         2/60COM   30SPX+300D.PET-110*86-175.3-DOBBY   110*86  \n",
        "\n",
-       "                 Warp            Weft  \n",
-       "0                 6OE             6OE  \n",
-       "1            885D.PET        885D.PET  \n",
-       "2            885D.PET        885D.PET  \n",
-       "3                 7OE             6OE  \n",
-       "4                 7OE             7OE  \n",
-       "...               ...             ...  \n",
-       "39360  2/60COM+2/20OE           30COM  \n",
-       "39361         2/60COM  30SPX+300D.PET  \n",
-       "39362         2/60COM  30SPX+300D.PET  \n",
-       "39363         2/60COM  30SPX+300D.PET  \n",
-       "39364         2/60COM  30SPX+300D.PET  \n",
-       "\n",
-       "[39365 rows x 9 columns]"
+       "[39325 rows x 5 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arti_df = pd.read_csv('articles.csv')\n",
+    "arti_df = pd.read_csv('articles2.csv')\n",
     "arti_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "c520c8de",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sinch\\AppData\\Local\\Temp\\ipykernel_4560\\3382896317.py:1: FutureWarning: In a future version of pandas all arguments of StringMethods.split except for the argument 'pat' will be keyword-only.\n",
-      "  arti_df['Warp'], arti_df['Weft'] = arti_df['Warp*Weft'].str.split(\"*\",1).str\n",
-      "C:\\Users\\sinch\\AppData\\Local\\Temp\\ipykernel_4560\\3382896317.py:1: FutureWarning: Columnar iteration over characters will be deprecated in future releases.\n",
-      "  arti_df['Warp'], arti_df['Weft'] = arti_df['Warp*Weft'].str.split(\"*\",1).str\n"
-     ]
-    }
-   ],
-   "source": [
-    "arti_df['Warp'], arti_df['Weft'] = arti_df['Warp*Weft'].str.split(\"*\",1).str"
    ]
   },
   {
@@ -4062,17 +3980,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 138,
    "id": "bfc40638",
    "metadata": {},
    "outputs": [],
    "source": [
-    "arti_df['EPI-PPI'] = arti_df.Construction.str.extract(r'([\\d]{2,3}[*-][\\d]{2,3})')"
+    "arti_df['EPI-PPI'] = arti_df.Construction.str.extract(r'[-*//]*([\\d]{2,3}[*-][\\d]{2,3})[-* ]*')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 139,
    "id": "609d8e3c",
    "metadata": {},
    "outputs": [
@@ -4228,7 +4146,7 @@
        "[39365 rows x 5 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4239,7 +4157,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 146,
+   "id": "1ad495e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arti_df['EPI-PPI'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "id": "dc78d80e",
    "metadata": {},
    "outputs": [],
